# ibis

./: README.md
dev/ibis/: Cargo.toml
dev/ibis/config/: config.toml
dev/ibis/src/: config.rs  core.rs  lib.rs  main.rs
prototype/ff/src/: ff_error.rs  ff_logger.rs  lib.rs
prototype/ibis/: Cargo.toml
prototype/ibis/src/: main.rs
