[package]
name = "ibis"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web フレームワーク
axum = "0.5.6"

# 非同期ランタイム
tokio = { version = "1.0", features = ["full"] }

# テンプレートエンジン
askama = "0.11"

# エラー定義
anyhow = "1"

# Tokioのロガーライブラリ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-appender = "0.2"

# 日付時刻処理
chrono = "0.4"

# シリアライズ・デシリアライズ
serde = "1"
serde_derive = "1"
toml = "0.4"

# SQL
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls", "mysql"] }

